# TODO

./: .gitignore  pyproject.toml
app/: forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
templates/app/: base.html  home.html  login.html  signup.html
to_do/: settings.py  urls.py
