[project]
name = "to-do"
version = "0.1.0"
description = ""
authors = [
    {name = "SumanBhandari69",email = "sumanbhandari6969@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "to_do", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
